Closed
Bug 493593
Opened 16 years ago
Closed 13 years ago
when no account is set up yet - uncaught exception calling nsIMsgSendLater.hasUnsentMessages
Categories
(MailNews Core :: Composition, defect)
MailNews Core
Composition
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 14.0
People
(Reporter: mschroeder, Assigned: mkmelin)
References
Details
Attachments
(1 file)
1.44 KB,
patch
|
standard8
:
review+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b5pre) Gecko/20090518 Lightning/1.0pre Shredder/3.0b3pre
Start-up of Thunderbird without any account/identity created results in:
Error: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgSendLater.hasUnsentMessages]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://messenger/content/mail-offline.js :: anonymous :: line 84" data: no]
Assignee | ||
Comment 1•16 years ago
|
||
I was just about to file this. (Linux too!)
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Hardware: x86 → All
Assignee | ||
Updated•16 years ago
|
Summary: Uncaught exception calling nsIMsgSendLater.hasUnsentMessages → when no account is set up yet - uncaught exception calling nsIMsgSendLater.hasUnsentMessages
Reporter | ||
Comment 2•16 years ago
|
||
Seems to be fixed after http://hg.mozilla.org/comm-central/rev/f2ad961aefcb#l3.77 has been checked in. Magnus, do you agree?
Assignee | ||
Comment 3•16 years ago
|
||
Nope, still there using
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1pre) Gecko/20090530 Shredder/3.0b3pre
Error: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgSendLater.hasUnsentMessages]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://messenger/content/mail-offline.js :: anonymous :: line 84" data: no]
I got this exception when I try to go switch offline to online with one of my thunderbird profile.
I have to restart thunderbird to get back online.
With this profile, I even removed all my accounts, it still does not work.
Comment 6•15 years ago
|
||
Interesting observations i just made: the de-offlining via Menu or offline button still doesn't work with TB3.0.1b. However, there is a way to get into online mode again: If you go to Tools->add on and try to find updates, you get the error messsage that TB is offline and it offers you the button to ``Go Online'' and, surprise, surprise, via this button you do in fact get back into online mode!!
Comment 7•13 years ago
|
||
In the terminal of a debug build, I see:
[Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgAccountManager.defaultAccount]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://messenger/content/msgMail3PaneWindow.js :: loadStartFolder :: line 778" data: no]Exception in LoadStartFolder caused by no default account. We know about this
WARNING: can't determine folder's server type: file /Users/florian/buildhg/comm-central/mailnews/base/util/nsMsgDBFolder.cpp, line 3182
WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file /Users/florian/buildhg/comm-central/mailnews/compose/src/nsMsgCopy.cpp, line 465
WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file /Users/florian/buildhg/comm-central/mailnews/compose/src/nsMsgSendLater.cpp, line 744
JavaScript error: , line 0: uncaught exception: [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIMsgSendLater.hasUnsentMessages]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: chrome://messenger/content/mail-offline.js :: <TOP_LEVEL> :: line 81" data: no]
Comment 8•13 years ago
|
||
(In reply to Florian Quèze from comment #7)
> In the terminal of a debug build, I see:
>
> [Exception... "Component returned failure code: 0x80004005
> (NS_ERROR_FAILURE) [nsIMsgAccountManager.defaultAccount]" nsresult:
> "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame ::
> chrome://messenger/content/msgMail3PaneWindow.js :: loadStartFolder :: line
> 778" data: no]Exception in LoadStartFolder caused by no default account.
> We know about this
This part of the noise I saw in my terminal is unrelated to calling nsIMsgSendLater.hasUnsentMessages, I filed bug 739222 on it.
Assignee | ||
Updated•13 years ago
|
Assignee: nobody → mkmelin+mozilla
Version: 1.9.1 Branch → Trunk
Assignee | ||
Comment 9•13 years ago
|
||
Attachment #610635 -
Flags: review?(mbanner)
Assignee | ||
Updated•13 years ago
|
Status: NEW → ASSIGNED
Updated•13 years ago
|
Attachment #610635 -
Flags: review?(mbanner) → review+
Assignee | ||
Comment 10•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 14.0
You need to log in
before you can comment on or make changes to this bug.
Description
•