Bug 493593 - when no account is set up yet - uncaught exception calling nsIMsgSendLater.hasUnsentMessages. r=standard8